# kernel-loader

./: .gitignore  CMakeLists.txt  README.md  test_load.py
.github/workflows/: build.yml
ci/: environment.yml
ci/scripts/: build_kernel_loader.sh  build_tests.sh
src/: kernels.patch  load_kernels.cc  load_kernels.h  rank_kernel.patch
tests/: CMakeLists.txt  test_load.py  test_main.cc
